--- a/walkgen_surface_processing/config/params.yaml
+++ b/walkgen_surface_processing/config/params.yaml
@@ -16,3 +16,4 @@ walkgen_params:
     min_area: 0.03  # Minimum area to keep the surfaces
     N_phase: 6  # Number of step to proceed (--> N_phase * n_gait step in SL1M)
     N_phase_return: 2  # Number of step to return (N_phase_return surfaces for each foot)
+    offset_z: -0.03 # Offset on the z-axis
