--- a/walkgen_footstep_planner/config/params.yaml
+++ b/walkgen_footstep_planner/config/params.yaml
@@ -31,3 +31,4 @@ walkgen_params:
     N_sample: 10  # Number of sample in the least square optimisation for Bezier coeffs
     N_sample_ineq: 8  # Number of sample while browsing the curve
     degree: 7  # Degree of the Bezier curve
+    early_termination_ratio: 0.7 # % of the flying to at which stop the end-position and curve optimisation(avoid slips at the end)
